Phishing game bugfix and beginning of Passwords

--- a/passwords.html
+++ b/passwords.html
@@ -58,7 +58,10 @@
           <div class="col-7">
             <div class="information">
               <h4>Why care about strong passwords?</h4>
-              <p>lorem ipsum</p>
+              <p>Your digital keychain (that is, your collection of passwords) dictate who can access which of your things over the internet. An easily-guessable password or a password you share across different accounts is a vulnerable one.</p>
+              <p>But why care about this? If a bad actor accesses your password, they'll be able to log in to any accounts associated with it--including things like your bank account.</p>
+              <p><strong>Strong passwords are your first line of defense</strong> to prevent this. The longer a password is, the more difficult it is for a hacker to crack it.</p>
+              <p>Essentially, passwords are stored using an algorithm known as hashing.</p>
             </div>
             <div class="how-to">
               <h4>How to make a strong password</h4>
