Final Upload nonwithstanding style changes

--- a/index.html
+++ b/index.html
@@ -66,17 +66,20 @@
       </nav>
       <div class="content">
         <div id="the-data">
+          <div class="heading">
+            <h4><strong>Attacks By Month</strong></h4>
+          </div>
           <canvas id="attacks-by-year"> </canvas>
           <div class="container">
             <div class="row">
               <div class="col-6">
                 <div class="heading">
-                  <h4>Attack Breakdown</h4>
+                  <h4><strong>Attack Breakdown</strong></h4>
                 </div>
                 <canvas id="attack-types"> </canvas>
               </div>
               <div class="col-6">
-                <h4 class="heading">Attacks Since 2006</h4>
+                <h4 class="heading"><strong>Attacks Since 2006</strong></h4>
                 <input
                   type="text"
                   class="form-control"
