--- a/passwords.html
+++ b/passwords.html
@@ -56,35 +56,104 @@
       <div class="content container">
         <div class="row align-items-start">
           <div class="col-7">
-            <div class="information">
-              <h4>Why care about strong passwords?</h4>
-              <p>Your digital keychain (that is, your collection of passwords) dictate who can access which of your things over the internet. An easily-guessable password or a password you share across different accounts is a vulnerable one.</p>
-              <p>But why care about this? If a bad actor accesses your password, they'll be able to log in to any accounts associated with it--including things like your bank account.</p>
-              <p><strong>Strong passwords are your first line of defense</strong> to prevent this. The longer a password is, the more difficult it is for a hacker to crack it.</p>
-              <p>Essentially, passwords are stored using an algorithm known as hashing.</p>
+            <div class="information password-info">
+              <h4><strong>Why care about strong passwords?</strong></h4>
+              <p>
+                Your digital keychain (that is, your collection of passwords)
+                dictate who can access which of your things over the internet.
+                An easily-guessable password or a password you share across
+                different accounts is a vulnerable one.
+              </p>
+              <p>
+                But why care about this? If a bad actor accesses your password,
+                they'll be able to log in to any accounts associated with
+                it--including things like your bank account.
+              </p>
+              <p>
+                <strong>Strong passwords are your first line of defense</strong>
+                to prevent this. The longer a password is, the more difficult it
+                is for a hacker to crack it.
+              </p>
+              <p>
+                Essentially, passwords are stored using an algorithm known as
+                hashing. Unlike encryption, hashing is not reversible. So, the
+                only way to recover hashed passwords is by comparing the hashed
+                forms of all possible candidates until there is a match. Thus,
+                the longer and more character types a password has, the longer
+                it will take to brute force it.
+              </p>
             </div>
-            <div class="how-to">
-              <h4>How to make a strong password</h4>
-              lorem ipsum
+            <h4 class="heading"><strong>Test your password strength</strong></h4>
+            <div class="password-check form-group">
+              <input
+                type="text"
+                class="form-control"
+                id="password-enter"
+                placeholder="Enter a password..."
+              />
+              <br />
+              <div
+                class="password-bar progress"
+                role="progressbar"
+                aria-valuenow="0"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+                <div class="progress-bar" style="width: 0%"></div>
+              </div>
             </div>
-            <div class="games">
-              <h4>Activity: Test your password strength</h4>
-              game here
-              <h4>Activity: Identify the strong passwords</h4>
-              game here
-              <h4>Activity: Generate a strong password</h4>
-              game here
+            <br />
+            <div class="how-to password-how-to">
+              <h4><strong>How to make a strong password</strong></h4>
+              <p>
+                As you can see, the length of a password is the most important factor for its strength. However, it's also critical to use a mix of lower and uppercase letters, numbers, and symbols.
+              </p>
+              <p>
+                This is because the longer a password is and the greater variety of characters that it uses, the longer it takes to brute-force as there is a greater amount of potential characters in each spot of a password.
+              </p>
             </div>
           </div>
           <div class="col-4">
-            <img class="img-data"
+            <img
+              class="img-data"
               src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimages.squarespace-cdn.com%2Fcontent%2Fv1%2F5ffe234606e5ec7bfc57a7a3%2F1615485490880-Y8L81ZT40KMHH6NATL8I%2FHive%2BSystems%2B-%2BPassword%2BTable.jpg&f=1&nofb=1&ipt=759185f4925f538bb79883b02b460ff52a1a9e6c516075d6adfd19a63a684288&ipo=images"
             />
+            <br /><br />
+            <div class="games">
+              <h3 class="heading"><strong>Activities</strong></h3>
+              <h4 class="heading">Identify the strong passwords</h4>
+              <p class="heading">Click what you believe is <br>the stronger password.</p>
+              <div class="container card identify-game" style="background-color:#003459; border: none">
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill points"><span class="pass-identify-points">0</span>/4</span>
+                <div class="row">
+                  <div class="col-6">
+                    <div class="card pass-1">
+                      
+                    </div>
+                  </div>
+                  <div class="col-6">
+                    <div class="card pass-2">
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <h4 class="heading">Generate a strong password</h4>
+              <div class="card">
+                <div class="card-body">
+                  <label for="randompass-length" class="form-label card-text">Password Length: <span class="length">1</span></label>
+                  <input type="range" class="form-range" id="randompass-length" min="1" max="20" step="1">
+                  <button class="btn pass-btn">Generate!</button>
+                  <h5 class="card-title random-pass"></h5>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="passwords.js"></script>
   </body>
 </html>
