Minor text fix (preventing a widow)

--- a/passwords.html
+++ b/passwords.html
@@ -121,7 +121,7 @@
             <br /><br />
             <div class="games">
               <h3 class="heading"><strong>Activities</strong></h3>
-              <h4 class="heading">Identify the strong passwords</h4>
+              <h4 class="heading">Identify the <br>strong passwords</h4>
               <p class="heading">Click what you believe is <br>the stronger password.</p>
               <div class="container card identify-game" style="background-color:#003459; border: none">
                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill points"><span class="pass-identify-points">0</span>/4</span>
